update to new group page

--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -1,7 +1,6 @@
 ---
 ---
 
-
 <style>
 .btn{
     margin-bottom:5px;
@@ -23,7 +22,7 @@ pre{
 
 
 <div class="text-justify">
-{{reference | replace_first: 'Bryngelson, S. H.', '<b>Bryngelson, S. H.</b>' | replace_first: 'Bryngelson, S.', '<b>Bryngelson, S.</b>' | replace_first: 'Bryngelson SH', '<b>Bryngelson SH</b>' | replace_first: 'Bryngelson S', '<b>Bryngelson S</b>'}}</div>
+{{reference }}</div>
 
 {% assign bibtest = false %}
 {% if entry.file %}
