--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,17 @@
 	  <div class="row">
 		<div class="col-sm-4">
 		    <h5>About</h5>	
-            <p>{{ site.affiliation }}</p>
+            <p>{{ site.about }}</p>
 		</div>
 
 		<div class="col-sm-4">
-		    <h5>Contact</h5>	
-            <p>{{ site.contact }}</p>
+		    <h5>Information</h5>	
+            <p>{{ site.information }}</p>
 		</div>
 
 		<div class="col-sm-4">
 		    <h5>Coordinates</h5>	
-            <p>{{ site.location }}</p>
+            <p>{{ site.coordinates }}</p>
 		</div>
 	  </div>
 
