--- a/_sass/SHB_css.scss
+++ b/_sass/SHB_css.scss
@@ -2,6 +2,14 @@ img {
     border-radius:5%;
 }
 
+a {
+  color: #c0995e;
+}
+
+a:hover {
+  color: lighten(#c0995e,20%);
+}
+
 .jumbotron {
     padding:20px; 
     padding-bottom:7px; 
